# Jarvis

./: .env.example  .gitignore  config.py  deepseek.py  features.txt  main.py  main_window.py  requirement.txt  triel  triel.py
JarvisDesktop/: README.md  index.html  package.json  tsconfig.json
JarvisDesktop/src-tauri/: Cargo.toml  tauri.conf.json
JarvisDesktop/src-tauri/capabilities/: default.json
JarvisDesktop/src-tauri/src/: lib.rs  main.rs
LLM/: chatbot.py  offlineLLM.py  onlineLLM.py  openrouterLLM.py  tempCodeRunnerFile.py
api/: main.py
body/: __init__.py  listen.py  listen_vosk.py  listen_whisper.py  speak.py  speak_TTS.py  speak_edgetts.py  speak_kokoro.py  wake_word.py
brain/: brain.py  context.py  conversation_manager.py  dialogue_manager.py  events.py  followup_resolver.py  intent_engine.py  performance.py  request_manager.py  response_picker.py  router.py  speech_manager.py
data/: responses.json
database/: app_names.json  cache.json  sync.json
desktop/: __init__.py
memory/: auth.py  conversation.py  firebase_sync.py  firestore_sync.py  local_cache.py  memory_retriver.py  sync_manager.py  user_data.py
other/: git_commands.txt  image_upscale.py  jarvis-ai file structure.txt  triel.py
services/: __init__.py  app_service.py  chat_service.py  music_service.py  service_router.py  time_service.py
system/: router.py
tests/: test_conversation_memory.py  test_dialogue_manager.py  test_router.py  test_temporal_reasoner.py
utils/: async_executor.py  constants.py  logger.py  network.py
vault/: __init__.py  encrypt.py  vault_manager.py
(+66 files in other folders)
