[package]
name = "jarvis-desktop"
version = "0.1.0"
description = "JARVIS AI assistant desktop shell"
authors = ["Jarvis"]
edition = "2021"

[lib]
name = "jarvis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
